--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,29 @@
     <string name="orderNow">立即訂購</string>
     <string name="undo">還原</string>
     <string name="clear">清除</string>
+    <string name="member_number">帳號：</string>
+    <string name="password">密碼：</string>
+    <string name="sex">性別：</string>
+    <string name="man">男</string>
+    <string name="woman">女</string>
+    <string name="nickname">暱稱：</string>
+    <string name="email">e-mail：</string>
+    <string name="confirm">確認</string>
+    <string name="cancel">取消</string>
+    <string name="resetpassword">重設密碼</string>
+    <string name="belongstore">所屬店家：</string>
+    <string name="commen">已發表評論：</string>
+    <string name="status">狀態：</string>
+    <string name="username">名稱：</string>
+    <string name="address">地址：</string>
+    <string name="workertime">營業時間：</string>
+    <string name="parking">停車資訊：</string>
+    <string name="phone">電話：</string>
+    <string name="decorating">店內照片：</string>
+    <string name="menu">菜單照片：</string>
+    <string name="update">上傳</string>
+    <string name="registered">註冊</string>
+    <string name="storename">店家名稱：</string>
+    <string name="storeaddress">店家地址：</string>
+    <string name="add">新增</string>
 </resources>
