--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -185,4 +185,5 @@
     <string name="addStoreFail">新增店家失敗，請再試一次</string>
     <string name="order">訂購餐點</string>
     <string name="reviewStore">審核店家</string>
+    <string name="loadFail">載入失敗，請檢查網路狀態</string>
 </resources>
