--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -192,4 +192,12 @@
     <string name="NewPassword">新密碼</string>
     <string name="PleaseCheckPassword">請確認密碼</string>
     <string name="NewPasswordAndCheckPassword">新密碼與確認密碼必須一致</string>
+    <string name="deleteFail">刪除失敗，請檢查網路狀態</string>
+    <string name="deleteSuc">刪除成功</string>
+    <string name="addFail">新增失敗，請檢查網路狀態</string>
+    <string name="addSuc">新增成功</string>
+    <string name="editFail">編輯失敗，請檢查網路狀態</string>
+    <string name="editSuc">編輯成功</string>
+    <string name="complete">完成</string>
+
 </resources>
