--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -203,4 +203,15 @@
     <string name="callHint">電話播出後將視窗切回便當王，就可以一邊看統計資訊一邊訂購唷！</string>
     <string name="imageUpdateSuc">照片更新成功</string>
     <string name="imageUpdateFail">照片更新失敗，請檢查網路狀態</string>
+    <string name="previewStoreInfo">審核店家資訊</string>
+    <string name="previewStoreMenu">審核店家菜單</string>
+    <string name="previewStorePhoto">審核店家照片</string>
+    <array name="previewStoreArray">
+        <item>審核資訊</item>
+        <item>審核菜單</item>
+        <item>審核照片</item>
+        <item>備註</item>
+        <item>不通過</item>
+        <item>通過</item>
+    </array>
 </resources>
