--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -220,4 +220,6 @@
     <string name="previewPush">審核推播</string>
     <string name="appeal">申訴</string>
     <string name="note">備註</string>
+    <string name="title_activity_home_maps">Map</string>
+    <string name="research">重新搜尋</string>
 </resources>
