--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,4 +227,5 @@
     <string name="findFail">查詢失敗</string>
     <string name="storeRegisterSuc">註冊成功，審核時間約2~3天，\n請耐心等待</string>
     <string name="storeRegisterFail">註冊失敗，請檢查網路狀態</string>
+    <string name="errorReport">錯誤回報</string>
 </resources>
