--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -240,4 +240,10 @@
     <string name="appelaSuc">申訴成功</string>
     <string name="appelaFail">申訴失敗</string>
     <string name="appelaComment">檢舉評論</string>
+    <string name="save">儲存</string>
+    <string name="dealComplete">處理完成</string>
+    <string name="enterDealResult">請輸入處理結果</string>
+    <string name="checkStoreError">查看店家錯誤</string>
+    <string name="connectError">連線失敗，請檢查網路狀態</string>
+
 </resources>
