--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -276,4 +276,5 @@
         <item>審核通過</item>
     </array>
     <string name="editPushNeedRe">推播審核後若要重新編輯\n需要再審核一次，您確定嗎？</string>
+    <string name="noPoint">點數不足，無法推播</string>
 </resources>
