--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="storeAddress">店家地址</string>
     <string name="add">新增</string>
     <string name="Previous_page">上一頁</string>
-    <string name="pushManage">推播管理</string>
+    <string name="pushmanage">推播管理</string>
     <string name="push_name">推播名稱</string>
     <string name="send_time">發送時間</string>
     <string name="push_content">推播內容</string>
